week1_move(1138,14503,14719): sooyeon_230207

--- a/sooyeon/week1/Main_1138.md
+++ b/sooyeon/week1/Main_1138.md
@@ -1,6 +1,6 @@
 # 1138
 
-<img src="img/1138.jpg" title="" alt="1138"></img><br/>
+<img src="../img/1138.jpg" title="" alt="1138"></img><br/>
 <br>
 left[] : 문제에서 주어진 배열(왼쪽 사람 수)<br>
 result[] : 재귀돌려서 나온 배열 (0123~3210)<br>
