--- a/sooyeon/week1/Main_14503.md
+++ b/sooyeon/week1/Main_14503.md
@@ -1,6 +1,6 @@
 # 14503
 
-<img src="img/14503.jpg" title="" alt="14503"></img><br/>
+<img src="../img/14503.jpg" title="" alt="14503"></img><br/>
 
 <br>
 dr[],dc[] 에 {왼, 위, 오, 아} 순으로 저장<br>(direction 기준 -1씩하면서 4번 돌수 있도록)
