--- a/rayeon/week15/15898.md
+++ b/rayeon/week15/15898.md
@@ -17,10 +17,33 @@ https://www.acmicpc.net/problem/15898
 
 ![Array](./15898_img.png)
 
-가마와 재료들을 (품질/효능)(원소) 형태의 int 배열로 구성한다.  
-('R' : 1, 'B' : 2, 'G' : 3, 'Y' : 4, 'W' : 0)
+가마와 재료들을 (품질/효능)(원소) 형태의 하나의 int 배열로 구성한다.  
+각 원소들을 문자가 아닌 숫자('R' : 1, 'B' : 2, 'G' : 3, 'Y' : 4, 'W' : 0)로 표현한다.
 
-선택한 재료를 회전 시키면서 가마 안을 순회한다.
+&nbsp;
+
+```java
+int kilnElement =  kiln[r + i][c + j] % 10;
+int kilnQuality = kiln[r + i][c + j] / 10;
+```
+
+가마 한 칸의 값이 94라면, 10으로 나눈 나머지 4가 원소가 되고 10으로 나눈 몫인 9가 품질이 된다.
+
+&nbsp;
+
+```java
+    int ingredientElement = Math.abs(ingredient[i][j]) % 10;
+    int ingredientEffect = Math.abs(ingredient[i][j]) / 10;
+
+    if (ingredient[i][j] < 0) {
+        ingredientEffect *= (-1);
+    }
+```
+
+재료 한 칸의 값이 -94라면, 우선 절대값을 10으로 나눈 나머지(4)와 몫(9)을 구한다.  
+재료 한 칸의 값이 음수인 경우 효능이 음수인 것이므로 효능에 -1을 곱한다.
+
+&nbsp;
 
 #
 
